--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HTML>
     <head>
         <script src="/dist/main.js" defer></script>
-        
+        <link href= '/assets/styles.css' rel= 'stylesheet'>
     </head>
     <body>
         <h1>Books to Read</h1>
